--- a/grid-packages/ag-grid-docs/documentation/src/pages/license-pricing.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/pages/license-pricing.module.scss
@@ -160,9 +160,9 @@
     svg {
         --text-color: red;
 
-        position: absolute;
+        position: re;
         width: 26px;
-        bottom: -7px;
+        bottom: 1px;
         right: 2px;
     }
 }
