AG-3390 - Pricing page, styling updates

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/core/_variables.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/core/_variables.scss
@@ -51,6 +51,7 @@ $font-size-extra-large: math.div(36rem, 16); // convert px values to rems
 $font-size-massive: math.div(54rem, 16); // convert px values to rems
 $font-size-gigantic: math.div(82rem, 16); // convert px values to rems
 
+$line-height-ultra-tight: 1;
 $line-height-tight: 1.25;
 $line-height-normal: 1.5;
 $line-height-loose: 1.75;
